--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             <p>comment 1</p> -->
         </div>
     </div>
+    <h4>Developer Barnoyev Mehriddin tg: @M_BarnoyevDev</h4>
     </div>
   </body>
 </html>
